Add bug 9
