# Swagger_3.2.7.yml
@@ -114,6 +114,23 @@ paths:
       responses:
         "200":
           description: sendGreeting 200 response
+  /bug9/greeting:
+    get:
+      tags:
+      - Bug9
+      summary: Return a friendly greeting.
+      description: Return a friendly greeting.
+      operationId: getGreeting
+      parameters: []
+      responses:
+        "200":
+          description: A friendly greeting
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Greeting'
+        "500":
+          description: Internal server error
 components:
   schemas:
     BackupFrequencyDto:
